oxiplate-derive/tests/broken/derive/unescaped-quotation-marks.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/unescaped-quotation-marks.rs:4:30
  |
4 | #[oxiplate_inline(html: "foo""bar")]
  |                              ^^^^^

error: unexpected token
 --> tests/broken/derive/unescaped-quotation-marks.rs:4:30
  |
4 | #[oxiplate_inline(html: "foo""bar")]
  |                              ^^^^^
