oxiplate-derive/tests/broken/derive/unescaped-quotation-marks.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(html: "foo""bar")]
struct Data;

fn main() {}
